Hotfix comment-out bib

--- a/main.tex
+++ b/main.tex
@@ -250,8 +250,8 @@ Thank you.
 %
 \newpage
 % \reference
-\bibliographystyle{plain}
-\bibliography{mthesis}
+% \bibliographystyle{plain}
+% \bibliography{mthesis}
 %
 % 付録
 %
