--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,14 @@
 %
 \studentnumber{123456}
 %
+% 研究室名
+%
+\jlabname{xxx 研究室}
+%
+% Lab Name
+%
+\elabname{xxx Lab.}
+%
 % 修士論文 か 課題研究 かの選択
 %
 \doctitle{\mastersthesis}       % 修士論文
